# jupyagent

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  install.ps1  install.sh  jupyagent.py  pyproject.toml
src/jupyagent/: __init__.py  main.py
src/jupyagent/docker/: Dockerfile  __init__.py  opencode.json.template  register-kernel.sh  run-jupyter-mcp.sh  start.sh  supervisord.conf  zellij-config.kdl
