[project]
name = "jupyagent"
version = "0.3.0"
description = "One-command installer for Jupyter + LLM Agent sandbox"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.0",
    "questionary>=2.0.0",
]
scripts = { jupyagent = "jupyagent.main:run" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jupyagent"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/jupyagent/**/*.py",
    "src/jupyagent/docker/*",
]
