[project]
name = "jupyagent"
version = "0.2.0"
description = "One-command installer for Jupyter + LLM agent sandbox"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.0",
    "questionary>=2.0.0",
]
scripts = { jupyagent = "jupyagent.main:run" }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

